--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "",
 	"main": "./src/app.ts",
 	"scripts": {
-		"start": "node dist/app.js",
-		"genjs": "tsc",
+		"start": "npm run build && node dist/app.js",
+		"build": "tsc",
 		"dev": "tsnd --files src/app.ts --cls"
 	},
 	"keywords": [],
@@ -26,6 +26,7 @@
 		"@types/multer": "^1.4.7",
 		"@types/node": "^18.11.9",
 		"@types/uuid": "^8.3.4",
-		"ts-node-dev": "^2.0.0"
+		"ts-node-dev": "^2.0.0",
+		"typescript": "^4.9.3"
 	}
 }
