--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "./src/app.ts",
 	"scripts": {
-		"start": "npm run build && node dist/app.js",
+		"start": "node dist/app.js",
 		"build": "tsc",
 		"dev": "tsnd --files src/app.ts --cls"
 	},
